kubernetes/platform/longhorn/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    argocd.argoproj.io/tracking-id: longhorn-ingress:networking.k8s.io/Ingress:longhorn-system/longhorn
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - longhorn.shreck.co.uk
      secretName: shreck-co-uk-tls
  rules:
    - host: longhorn.shreck.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
